--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_marginTop="80dp"
         android:id="@+id/lv_list"
-        android:divider="@null"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:divider="@null" />
 
 </LinearLayout>
