--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="5dp"
     android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:background="@android:color/transparent">
 
     <androidx.cardview.widget.CardView
@@ -15,7 +16,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="8dp"
         app:cardBackgroundColor="#20ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_moviegenre"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -56,19 +57,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/tv_moviedesc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:minLines="3"
                 android:text="@string/desc_movie"
                 android:textColor="@android:color/white"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toTopOf="@+id/imageButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView2"
+                app:layout_constraintStart_toStartOf="@+id/tv_moviegenre"
                 app:layout_constraintTop_toBottomOf="@+id/tv_duration"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -97,8 +101,8 @@
                 android:paddingBottom="2dp"
                 android:textColor="#ffffff"
                 android:textSize="10sp"
-                app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintStart_toStartOf="@+id/tv_moviegenre"
+                app:layout_constraintTop_toBottomOf="@+id/tv_moviegenre" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -107,9 +111,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="4dp"
+                android:src="@drawable/ic_star_border_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-               android:src="@drawable/ic_star_border_black_24dp" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <ImageButton
                 android:id="@+id/imageButton"
@@ -119,9 +123,9 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="4dp"
                 android:background="@null"
+                android:src="@drawable/ic_file_download_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                android:src="@drawable/ic_file_download_black_24dp" />
+                app:layout_constraintEnd_toStartOf="@+id/imageView2" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
@@ -138,9 +142,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:scaleType="centerCrop"
+                android:src="@drawable/ic_more_vert_black_24dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_more_vert_black_24dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <RatingBar
                 android:id="@+id/ratingBar"
@@ -151,7 +155,7 @@
                 android:layout_marginLeft="4dp"
                 android:numStars="5"
                 android:rating="5"
-                android:stepSize="0.1"
+                android:stepSize="0.5"
                 android:theme="@style/RatingBar"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_duration"
                 app:layout_constraintStart_toEndOf="@+id/tv_rating"
